syntax = "proto3";

package org.csc.wallet.service;

message Result{
    int32 rpl_code =1;//返回码
    string rpl_msg=2;//接口返回信息
}

message OldResult{
    int32 retCode =1;//返回码
    string retMsg=2;//接口返回信息
}